add PlayerCar class

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 @import  "./styles/ex.scss";
+@import "./styles/canvas.scss";
 
-#main {
-    color: $color
-}
+// #main {
+//     color: $color
+// }
