Add speed to player, Add random speed for competitors, Add gamespeed

--- a/src/styles/canvas.scss
+++ b/src/styles/canvas.scss
@@ -1,5 +1,9 @@
-canvas {
-    border-radius: 5%;
-    background-color: rgba(0, 128, 0, 0.513);
-    border: 5px solid black
+#screen {
+    border-radius: 3%;
+    background-color: rgba(184, 165, 18, 0.513);
+    border: 5px solid black;
+}
+
+#stats {
+    
 }
