add new stats canvas, Add updateStats function, Add speed parameter

--- a/src/styles/canvas.scss
+++ b/src/styles/canvas.scss
@@ -1,9 +1,13 @@
 #screen {
+    background-color: #F2AC29;
+    opacity: 0.8;
+    border: 5px solid #A64456;
     border-radius: 3%;
-    background-color: rgba(184, 165, 18, 0.513);
-    border: 5px solid black;
 }
 
 #stats {
-    
+    background-color: #f25a38;
+    // opacity: 0.8;
+    border: 5px solid #A64456;
+    border-radius: 8%;
 }
