add Background class, two background objects, add updateBackgroundFrame, drawBackground

--- a/src/styles/canvas.scss
+++ b/src/styles/canvas.scss
@@ -1,6 +1,6 @@
 #screen {
-    background-color: #F2AC29;
-    opacity: 0.8;
+    // background-color: #F2AC29;
+    // opacity: 0.8;
     border: 5px solid #A64456;
     border-radius: 3%;
 }
