--- a/src/styles/canvas.scss
+++ b/src/styles/canvas.scss
@@ -1,3 +1,9 @@
+
+#main {
+    display: flex;
+    justify-content: space-between;
+}
+
 #screen {
     // background-color: #F2AC29;
     // opacity: 0.8;
@@ -8,6 +14,12 @@
 #stats {
     background-color: #f25a38;
     // opacity: 0.8;
-    border: 5px solid #A64456;
+    border: 5px solid #F29829;
+    border-radius: 8%;
+}
+
+#supportBar {
+    background-color: #F2AC29;
+    border: 5px solid #F24444;
     border-radius: 8%;
 }
