Add music stop and music pause features

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,31 @@
 @import "./styles/canvas.scss";
+@import "./styles/reset.scss";
 
+#main {
+    display: flex;
+    justify-content: space-between;
+}
+
+button {
+    background-color: #F24444;
+    color: aliceblue;
+    height: 50px;
+    width: 100px;
+    border-radius: 10%;
+}
+
+button:hover {
+    background-color: #F29829;
+}
+
+.music {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: end;
+    margin: 20px;
+    // align-items: center;
+}
