--- a/src/styles/canvas.scss
+++ b/src/styles/canvas.scss
@@ -1,9 +1,4 @@
 
-#main {
-    display: flex;
-    justify-content: space-between;
-}
-
 #screen {
     // background-color: #F2AC29;
     // opacity: 0.8;
@@ -18,7 +13,7 @@
     border-radius: 8%;
 }
 
-#supportBar {
+#support-bar {
     background-color: #F2AC29;
     border: 5px solid #F24444;
     border-radius: 8%;
