--- a/src/styles/canvas.scss
+++ b/src/styles/canvas.scss
@@ -2,19 +2,18 @@
 #screen {
     // background-color: #F2AC29;
     // opacity: 0.8;
-    border: 5px solid #A64456;
-    border-radius: 3%;
+    // border: 5px solid #A64456;
+    // border-radius: 3%;
 }
 
 #stats {
     background-color: #f25a38;
-    // opacity: 0.8;
     border: 5px solid #F29829;
-    border-radius: 8%;
+    // border-radius: 8%;
 }
 
 #support-bar {
     background-color: #F2AC29;
     border: 5px solid #F24444;
-    border-radius: 8%;
+    // border-radius: 8%;
 }
