Add greeting message, Add start button

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@
 
 #main {
     display: flex;
+    // position: relative;
     // justify-content: center;
 }
 
@@ -11,7 +12,7 @@ button {
     color: aliceblue;
     height: 50px;
     width: 100px;
-    border-radius: 10%;
+    border-radius: 20%;
 }
 
 button:hover {
@@ -19,13 +20,39 @@ button:hover {
 }
 
 .music {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
     display: flex;
-    justify-content: end;
-    margin: 20px;
-    // align-items: center;
+    flex-direction: column;
+    // justify-content: end;
+    // margin: 20px;
+    background-color: #F2884B;
+    border: 5px solid #037F8C;
+}
+
+#greetings {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 400px;
+    width: 400px;
+    border-radius: 15%;
+    background-color: #F2884B;
+    padding: 50px;
+    border: 5px solid #037F8C;
+    font-family: 'Kalam', cursive;
+    font-size: 22px;
+    color: black;
+}
+
+#startGame {
+    position: absolute;
+    bottom: 20px;
+    left: 40%;
+    align-self: flex-end;
+    
+}
+
+h2 {
+    padding: 10px;
+    font-weight: 900;
 }
