--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,15 @@
-@import "./styles/canvas.scss";
+// @import "./styles/canvas.scss";
 @import "./styles/reset.scss";
 
 #main {
     display: flex;
     // position: relative;
     // justify-content: center;
+}
+
+#stats {
+    background-color: #F2884B;
+    border: 5px solid #037F8C;
 }
 
 button {
@@ -62,7 +67,6 @@ button:hover {
     bottom: 20px;
     left: 40%;
     align-self: flex-end;
-    
 }
 
 h3 {
@@ -74,12 +78,6 @@ h2 {
     padding-top: 0px;
     padding-bottom: 17px;
 }
-
-// p {
-//     text-align: center;
-// }
-
-
 
 #arrows {
     height: 100px;
