Add Hit points to stats bar

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,7 @@
 }
 
 #stats {
-    background-color: #F2884B;
+    background-color: #F2D98D;
     border: 5px solid #037F8C;
 }
 
@@ -29,7 +29,7 @@ button:hover {
     flex-direction: column;
     // justify-content: end;
     // margin: 20px;
-    background-color: #F2884B;
+    background-color: #F2D98D;
     border: 5px solid #037F8C;
 }
 
@@ -54,12 +54,18 @@ button:hover {
     height: 400px;
     width: 400px;
     border-radius: 15%;
-    background-color: #F2884B;
+    background-color: #F2D98D;
     padding: 50px;
     border: 5px solid #037F8C;
     font-family: 'Kalam', cursive;
     font-size: 22px;
     color: black;
+}
+
+#finalMessage {
+    height: 100px;
+    width: 400px;
+    border-radius: 20%;
 }
 
 #startGame, #restartGame {
@@ -74,10 +80,10 @@ h3 {
     font-weight: 900;
 }
 
-h2 {
-    padding-top: 0px;
-    padding-bottom: 17px;
-}
+// h2 {
+//     padding-top: 0px;
+//     padding-bottom: 17px;
+// }
 
 #arrows {
     height: 100px;
