Add speedometer, add odometer

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,10 @@
     // justify-content: center;
 }
 
+#screen, #leftBackgroundPiece, #rightBackgroundPiece {
+    background-color: #F2D98D;
+}
+
 #stats {
     background-color: #F2D98D;
     border: 5px solid #037F8C;
