--- a/src/index.scss
+++ b/src/index.scss
@@ -1,82 +1,12 @@
-// @import "./styles/canvas.scss";
+@import "./styles/canvas.scss";
 @import "./styles/reset.scss";
+@import "./styles/modals.scss";
+@import "./styles/buttons.scss";
 
 #main {
     display: flex;
-    // position: relative;
-    // justify-content: center;
-}
-
-#screen, #leftBackgroundPiece, #rightBackgroundPiece {
-    background-color: #F2D98D;
-}
-
-#stats {
-    background-color: #F2D98D;
-    border: 5px solid #037F8C;
-}
-
-button {
-    background-color: #F24444;
-    color: aliceblue;
-    height: 50px;
-    width: 100px;
-    border-radius: 20%;
-}
-
-button:hover {
-    background-color: #F29829;
-}
-
-.music {
-    display: flex;
-    flex-direction: column;
-    // justify-content: end;
-    // margin: 20px;
-    background-color: #F2D98D;
-    border: 5px solid #037F8C;
-}
-
-#greetings-container {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
     align-items: center;
-    background-color: black;
-    opacity: 0.85;
-  }
-
-#greetings, #finalMessage {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    height: 400px;
-    width: 400px;
-    border-radius: 15%;
-    background-color: #F2D98D;
-    padding: 50px;
-    border: 5px solid #037F8C;
-    font-family: 'Sigmar One', cursive;
-    font-size: 20px;
-    color: black;
-}
-
-#finalMessage {
-    height: 100px;
-    width: 400px;
-    border-radius: 20%;
-}
-
-#startGame, #restartGame {
-    position: absolute;
-    bottom: 20px;
-    left: 40%;
-    align-self: flex-end;
+    justify-content: center;
 }
 
 h3 {
@@ -84,18 +14,14 @@ h3 {
     font-weight: 900;
 }
 
-// h2 {
-//     padding-top: 0px;
-//     padding-bottom: 17px;
-// }
-
-#arrows {
-    height: 100px;
-    margin: 10px;
+#helperBar {
+    display: flex;
+    flex-direction: column;
+    background-color: #1f6723;
+    border-right: 5px solid #05c5ed;
+    border-bottom: 5px solid #05c5ed;
+    border-top: 5px solid #05c5ed;
+    height: 700px;
 }
 
-#instructions {
-    // display: flex;
-    // flex-direction: column;
-    margin-top: 20px;
-}
+
