Add style to play and pause music buttons

--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -20,7 +20,7 @@ button:hover {
     align-self: flex-end;
 }
 
-#linkedin, #github {
+#linkedin, #github, #playMusic, #pauseMusic {
     height: 50px;
     width: 50px;
     background-size: cover;
@@ -33,6 +33,14 @@ button:hover {
     background-image: url('../resources/buttons/github.png');
 }
 
-#linkedin{
+#linkedin {
     background-image: url('../resources/buttons/linkedin.png');
+}
+
+#playMusic {
+    background-image: url('../resources/buttons/github.png');
+}
+
+#pauseMusic {
+    background-image: url('../resources/buttons/github.png');
 }
