--- a/src/styles/modals.scss
+++ b/src/styles/modals.scss
@@ -15,7 +15,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 450px;
+    height: auto;
     width: 400px;
     border-radius: 5%;
     background-color: #69a937;
