Add background image

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,14 @@
 @import "./styles/modals.scss";
 @import "./styles/buttons.scss";
 
+body {
+    background-image: url("../resources/background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
 #main {
+    margin-top: 1%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,9 +26,9 @@ h3 {
     justify-content: space-between;
     flex-direction: column;
     background-color: #1f6723;
-    border-right: 5px solid #05c5ed;
-    border-bottom: 5px solid #05c5ed;
-    border-top: 5px solid #05c5ed;
+    border-right: 5px solid #68156f;
+    border-bottom: 5px solid #68156f;
+    border-top: 5px solid #68156f;
     height: 700px;
 }
 
