--- a/src/styles/canvas.scss
+++ b/src/styles/canvas.scss
@@ -1,12 +1,12 @@
 #screen, #leftBackgroundPiece, #rightBackgroundPiece {
     background-color: #1f6723;
-    border-bottom: 5px solid #05c5ed;
-    border-top: 5px solid #05c5ed;
+    border-bottom: 5px solid #68156f;
+    border-top: 5px solid #68156f;
 }
 
 #stats {
     background-color: #1f6723;
-    border-left: 5px solid #05c5ed;
-    border-bottom: 5px solid #05c5ed;
-    border-top: 5px solid #05c5ed;
+    border-left: 5px solid #68156f;
+    border-bottom: 5px solid #68156f;
+    border-top: 5px solid #68156f;
 }
