--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -2,6 +2,7 @@ button {
     background-color: #e55c18;
     color: gainsboro;
     font-family: 'Sigmar One';
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.9);
     height: 50px;
     width: 100px;
     border-radius: 5%;
