--- a/src/styles/modals.scss
+++ b/src/styles/modals.scss
@@ -17,19 +17,19 @@
     transform: translate(-50%, -50%);
     height: auto;
     width: 400px;
-    border-radius: 5%;
+    border-radius: 25px;
     background-color: #69a937;
     padding: 50px;
-    border: 5px solid #e55c18;
-    font-family: 'Sigmar One';
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+    border: 2px solid #e55c18; 
+    font-family: "Sigmar One";
+    box-shadow: 0px 0 20px 0px #e55c18;
+    /* text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); */
     font-size: 20px;
     color: black;
-}
+  }
 
 #finalMessage {
-    height: 100px;
-    border: 5px solid #e55c18;
+    height: 70px;
     font-family: 'Kalam';
 }
 
@@ -40,3 +40,4 @@
 .introImg {
     height: 40px;
 }
+
