--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -4,7 +4,7 @@ button {
     font-family: "Sigmar One";
     padding: 5px;
     width: 100px;
-    border-radius: 5px;
+    border-radius: 15px;
     cursor: pointer;
     transition: all 0.3s;
     border: none;
@@ -44,6 +44,8 @@ button:active {
     background-repeat: no-repeat;
     background-position: center;
     align-self: flex-end;
+    border-radius: 50%;
+    transition: all 0.3s;
 }
 
 #wellfound {
@@ -54,6 +56,7 @@ button:active {
 #github {
     background-image: url('../resources/buttons/github.png');
     margin-top: 10px;
+    background-position-y: -0.5px;
 }
 
 #linkedin {
@@ -67,7 +70,8 @@ button:active {
 #playMusic:hover,
 #pauseMusic:hover,
 #github:hover,
-#linkedin:hover {
+#linkedin:hover,
+#wellfound:hover {
     background-color: #ebe03c;
 }
 
