--- a/src/styles/canvas.scss
+++ b/src/styles/canvas.scss
@@ -9,4 +9,7 @@
     border-left: 5px solid #68156f;
     border-bottom: 5px solid #68156f;
     border-top: 5px solid #68156f;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+    box-shadow: -10px 0px 20px 0px #68156f;
 }
