--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -37,7 +37,8 @@ button:active {
 #github, 
 #playMusic, 
 #pauseMusic, 
-#wellfound {
+#wellfound,
+#portfolio {
     height: 50px;
     width: 50px;
     background-size: cover;
@@ -50,7 +51,7 @@ button:active {
 
 #wellfound {
     background-image: url('../resources/buttons/angellist.png');
-    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 #github {
@@ -61,6 +62,11 @@ button:active {
 
 #linkedin {
     background-image: url('../resources/buttons/linkedin.png');
+    margin-top: 10px;
+}
+
+#portfolio {
+    background-image: url('../resources/buttons/portfolio.png');
 }
 
 #playMusic {
@@ -71,7 +77,8 @@ button:active {
 #pauseMusic:hover,
 #github:hover,
 #linkedin:hover,
-#wellfound:hover {
+#wellfound:hover,
+#portfolio:hover {
     background-color: #ebe03c;
 }
 
